<resources>
    <string name="app_name">连连看</string>
    <string name="Score">分数</string>
    <string name="Time">时间</string>
    <string name="Batter">连击</string>
    <string name="Failure">失败啦</string>
    <string name="Success">恭喜通关!</string>
    <string name="mode_normal">普通模式</string>
    <string name="mode_hard">困难模式</string>
    <string name="mode_easy">简单模式</string>
    <string name="Link">关卡</string>
    <string name="PauseString">暂停中</string>
    <string name="ExplainString">&#160;&#160;&#160;&#160;相同的神奇宝贝连线之后可以消除，注意神奇宝贝之间的转折不能超过两个</string>
    <string name="No_break">无转折</string>
    <string name="Two_break">两个转折</string>
    <string name="Fight_Explain">消除一对神奇宝贝</string>
    <string name="Bomb_Explain">消除某一对神奇宝贝</string>
    <string name="Refresh_Explain">重新刷新布局</string>
    <string name="Pause_Explain">暂停游戏</string>
    <string name="Know_Explain">我明白了</string>
    <string name="ShowMoney">购买金币</string>
    <string name="Prop_Fight_Text">锤子</string>
    <string name="Prop_Fight_Des">可以敲除一对\n可连接的动物</string>
    <string name="Prop_Bomb_Text">炸弹</string>
    <string name="Prop_Bomb_Des">消除某个种类\n所有的动物</string>
    <string name="Prop_Refresh_Text">重排</string>
    <string name="Prop_Refresh_Des">重新排列页面\n内的所有动物</string>
    <string name="Setting">设置</string>
    <string name="Music_Pic">背景音乐</string>
    <string name="FinishText">完成</string>
    <string name="Sound_Pic">游戏音效</string>
    <string name="One_break">一个转折</string>
</resources>