<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:orientation="vertical"
        android:padding="10dp">

        <!--暂停文字和图标-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <!--暂停-->
            <com.muen.gamelink.widget.MyTextView
                style="@style/ShowPauseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <!--躺下的皮卡丘-->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/view_pikaqiu" />
        </LinearLayout>

        <!--操作提示-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <!--解释说明文字-->
            <com.muen.gamelink.widget.MyTextView
                style="@style/ShowExplainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExplainString" />

            <!--无转折，两个转折-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <!--无转折-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:adjustViewBounds="true"
                        android:src="@drawable/view_no_break" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/No_break" />

                </LinearLayout>

                <!--两个转折-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:adjustViewBounds="true"
                        android:src="@drawable/view_two_break1" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Two_break" />

                </LinearLayout>

            </LinearLayout>

            <!--一个转折，两个转折-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <!--一个转折-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:adjustViewBounds="true"
                        android:src="@drawable/view_one_break" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/One_break" />

                </LinearLayout>

                <!--两个转折-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:adjustViewBounds="true"
                        android:src="@drawable/view_two_break2" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Two_break" />

                </LinearLayout>

            </LinearLayout>

            <!--拳头道具，炸弹道具-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--拳头道具-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/link_prop_fight" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fight_Explain" />
                </LinearLayout>

                <!--炸弹道具-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/link_prop_bomb" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bomb_Explain" />
                </LinearLayout>


            </LinearLayout>

            <!--刷新道具，暂停-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--刷新道具-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/link_prop_resort" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/Refresh_Explain" />
                </LinearLayout>

                <!--暂停-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/link_stop" />

                    <com.muen.gamelink.widget.MyTextView
                        style="@style/ShowExplainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/Pause_Explain" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!--按钮提示-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.muen.gamelink.widget.MyTextView
                android:id="@+id/main_know"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape_main_know"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/Know_Explain"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
