<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_setting_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--具体内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/title_layout">

            <!--背景音乐-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <com.muen.gamelink.widget.MyTextView
                    style="@style/SettingMusicText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Music_Pic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/view_setting_pic_bg"
                        android:src="@drawable/view_setting_music_pic" />

                    <SeekBar
                        android:id="@+id/seek_bar_music"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@null"
                        android:max="100"
                        android:progress="80"
                        android:progressDrawable="@drawable/progressbar_bg"
                        android:secondaryProgress="100"
                        android:splitTrack="false"
                        android:thumb="@drawable/seek_bar_point" />

                </LinearLayout>


            </LinearLayout>

            <!--音效-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <com.muen.gamelink.widget.MyTextView
                    style="@style/SettingMusicText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Sound_Pic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/view_setting_pic_bg"
                        android:src="@drawable/view_setting_sound_effect" />

                    <SeekBar
                        android:id="@+id/seek_bar_effect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@null"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/progressbar_bg"
                        android:secondaryProgress="100"
                        android:splitTrack="false"
                        android:thumb="@drawable/seek_bar_point" />

                </LinearLayout>


            </LinearLayout>

            <!--完成-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:gravity="center_horizontal">

                <com.muen.gamelink.widget.MyTextView
                    android:id="@+id/setting_finish"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/view_setting_finish"
                    android:gravity="center"
                    android:text="@string/FinishText"
                    android:textColor="#ffffff"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <!--标题部分-->
        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="240dp"
            android:layout_height="200dp"
            android:background="@drawable/view_setting_banner"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.muen.gamelink.widget.MyTextView
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/Setting" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
